--- a/package.json
+++ b/package.json
@@ -23,15 +23,19 @@
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-fastify": "^6.6.7",
     "@nestjs/typeorm": "^6.1.3",
+    "dotenv": "^8.1.0",
+    "joi": "^14.3.1",
     "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
-    "typeorm": "^0.2.18"
+    "typeorm": "^0.2.19",
+    "typeorm-seeding": "^1.0.0-rc.3"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
     "@types/jest": "24.0.11",
+    "@types/joi": "^14.3.3",
     "@types/node": "11.13.4",
     "@types/supertest": "2.0.7",
     "jest": "24.7.1",
