--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
+    "@types/dotenv": "^6.1.1",
     "@types/jest": "24.0.11",
     "@types/joi": "^14.3.3",
     "@types/node": "11.13.4",
