--- a/.env
+++ b/.env
@@ -7,6 +7,6 @@ APP_ENV=dev
 
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=capstone_crm_dev
+DB_DATABASE=hzlh-portal
 DB_USERNAME=root
 DB_PASSWORD=root
